2006-08-09 02:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSButtonCell.m: Correct encoding of repeat and delay in
	encodeWithCoder: since they are encoded as integers.

2006-08-09 01:44-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSFont.m: Correct issue with size encoding in encodeWithCoder:
	and initWithCoder:.  Properly encode/decode as a float.
	* Source/NSImageCell.m: Implement encodeWithCoder:.
	* Source/NSImage.m: Comment out code in encodeWithCoder: which
	encodes reps until can determine how to properly encode images.
	* Source/NSImageView.m: implement encoding in encodeWithCoder:
	* Source/NSScrollView.m: Don't encode headerClipView if it's
	nil.
	* Source/NSTextView.m: Properly encode background color in 
	NSTextViewSharedData.
	* Source/NSView.m: Encoding corrections in initWithCoder: and
	encodeWithCoder:.

2006-08-08 21:33-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h
	* Source/GSNibCompatibility.m: Fix for window size issue caused
	by previous change.
	* Source/NSBitmapImageRep.m
	* Source/NSBox.m
	* Source/NSButtonCell.m
	* Source/NSCachedImageRep.m
	* Source/NSImage.m
	* Source/NSTabViewItem.m
	* Source/NSTabView.m
	* Source/NSTextFieldCell.m: Added encoding in encodeWithCoder:

2006-08-09  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSStepper.h
	* Headers/AppKit/NSStepperCell.h: Removed private method declarations.
	* Source/NSStepper.m: Moved code from mouseDown: method to the cell
	method trackMouse:...untilMouseUp:. Also moved the _increment and
	_decrement methods to the cell class.
	* Source/NSStepperCell.m: Rewrote mouse tracking to be more
	similar to NSCell's implementation and not use any direct
	drawing. Do not use hard coded colour values in the drawing
	methods, implemented keyed encoding and cleaned up the rest of the
	class. 
	* Source/NSCell.m (trackMouse:...untilMouseUp:): Moved